--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
+    "mysql": "^2.18.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
